style: fix overlap of matrix header

--- a/docs/source/_static/custom.css
+++ b/docs/source/_static/custom.css
@@ -1,8 +1,11 @@
 .vertical-table-header th.head:not(.stub) {
     writing-mode: sideways-lr;
     white-space: nowrap;
-    max-width: 0;
     p {
        margin: 0;
     }
+}
+
+.vertical-table-header th abbr {
+    white-space: nowrap;
 }
